--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>Mark Ohnsman</h1>
+    <h1>Kasandra Wolf</h1>
     <h3>Mark@boisecodeworks.com</h3>
     <h3>208-123-4567</h3>
     <h3>MarkOhnsman.github.io</h3>
